Improve folders layout; add support for both unittest and pytest; add pylint; add some requirements

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+*.pyc
+
+# python setup.py bdist_wheel
 build/
 dist/
 bromine.egg-info/
+
+# IDE files
+.idea/
+
+# pytest
+.pytest_cache/
+
+# virtualenvs
+.venv*/
