abandon unittest in favour of pytest; add makefile to avoid having many bash scripts for lifecycle automation; split requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,2 @@
+PyHamcrest
 selenium
-
-# Build process dependencies
-setuptools
-wheel
-
-# QA dependencies
-pytest
-pylint
-tox
-
-# PyPI dependencies
-twine
