docs/conf.py takes version from bromine package

--- a/tox.ini
+++ b/tox.ini
@@ -4,3 +4,10 @@ envlist = py27,py36
 [testenv]
 commands = pytest
 deps = -rrequirements/test.txt
+
+[testenv:docs]
+basepython = python3
+changedir = docs
+whitelist_externals = make
+commands = make html
+deps = -r{toxinidir}/requirements/docs.txt
