fix: include the license in the generated wheel file

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,7 @@
 # need to generate separate wheels for each Python version that you
 # support.
 universal=1
+
+[metadata]
+# https://wheel.readthedocs.io/en/stable/#including-the-license-in-the-generated-wheel-file
+license_file = LICENSE.txt
