--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,10 @@
 envlist = py27,py36,py37
 
 [testenv]
-commands = pytest -s -ra
+commands = pytest -s -ra --cov=bromine
 deps = -rrequirements/test.txt
+setenv =
+    COVERAGE_FILE = .coverage_{envname}
 
 [testenv:docs]
 basepython = python3
